--- a/gradle/bintray-android-v1.gradle
+++ b/gradle/bintray-android-v1.gradle
@@ -25,18 +25,13 @@ def _user = System.getenv("BINTRAY_USER")
 def _key =  System.getenv("BINTRAY_API_KEY")
 def _passphrase = System.getenv("BINTRAY_PASSPHRASE")
 
-if(project.rootProject.file('local.properties').exists()){
+if(project.rootProject.file('local.properties').exists() && (_user == null || _user.isEmpty())){
     Properties properties = new Properties()
     properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
-    def local_user = properties.getProperty("bintray.user");
-    if(local_user != null) _user = local_user;
-
-    def local_key = properties.getProperty("bintray.apikey");
-    if(local_key != null) _key = local_key;
-
-    def local_passphrase = properties.getProperty("bintray.gpg.password");
-    if(local_passphrase != null) _passphrase = local_passphrase;
+    _user = properties.getProperty("bintray.user")
+    _key = properties.getProperty("bintray.apikey");
+    _passphrase = properties.getProperty("bintray.gpg.password")
 }
 
 // Bintray
